--- a/src/components/QueryResult/QueryResult.css
+++ b/src/components/QueryResult/QueryResult.css
@@ -132,3 +132,13 @@
         text-align: center;
     }
 }
+
+@media (max-width: 480px) {
+    .queryResult {
+    width: 100%;
+    }
+
+    .queryResult__statusText {
+        font-size: 12px;
+    }
+}
