--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,8 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    width: 360px;
+    width: calc(20% - 20px);
+    max-width: calc(20% - 20px);
     background-color: #ffffff;
     height: 100vh;
     margin-right: 10px;
@@ -32,4 +33,17 @@
 
 .sidebar__queries:hover {
     background-color: #B7B5E4;
+}
+
+@media (max-width: 480px) {
+
+    .sidebar {
+        height: 100px;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .sidebar__dropdown {
+        height: 50px;
+    }
 }
